--- a/src/style.css
+++ b/src/style.css
@@ -417,13 +417,14 @@ footer .follow .i:hover{
 /*Shop page*/
 
 #page-header{
-    background-image: url('images/back2.jpeg');
+    background-color:rgb(242, 236, 213);
     width: 100%;
     height: 40vh;
 }
 
 #page-header h2{
     text-align: center;
+    padding-top: 50px;
 }
 
 #pagination{
@@ -839,4 +840,72 @@ body
 {
     color: rgb(34, 34, 34);
     text-decoration: none;
+}
+
+
+/*Menu*/
+
+  .hamburger {
+    height: 48px;
+    width: 50px;
+    background-color: rgb(145, 130, 63);
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    justify-content: center;
+    align-items: center;
+    border: 0;
+    display: none;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1)    
+}
+
+.hamburger:hover {
+    cursor: pointer;
+}
+
+.hamburger__item {
+    display: block;
+    width: 30px;
+    height: 6px;
+    background-color: #fff;
+}
+
+.menu-toggle {
+    position: absolute;
+    visibility: hidden;
+}
+
+
+.menu-toggle:checked + .mobile__nav {
+    display: block;
+}
+
+.mobile__nav {
+    display:none;
+    box-sizing: border-box;
+    padding: 20px 40px;
+    position: absolute;
+    top: 0px;
+    left: 0;
+    width: 45%;
+    margin: 10px;
+    background: rgb(145, 130, 63);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05);
+}
+
+.mobile__nav__list {
+    display: flex;
+    flex-direction: column;
+}
+
+.mobile__nav__link {
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 32px;
+    color:  rgb(0, 0, 0);
+}
+ 
+.mobile__nav__item{
+    list-style: none;
 }
