--- a/src/style.css
+++ b/src/style.css
@@ -259,6 +259,11 @@
     transition: 0.2s;
 }
 
+.btn_banner a{
+text-decoration: none;
+color:#000;
+}
+
 #sm-banner .banner-box{
     display: flex;
     flex-direction: column;
